--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@faker-js/faker": "^7.6.0",
     "bootstrap": "^5.2.3",
     "connect-mongodb-session": "^3.1.1",
+    "dotenv": "^16.0.3",
     "file-loader": "^6.2.0",
     "node-sass": "^8.0.0",
     "sass": "^1.58.3",
