added default stuff to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,17 @@
 APP_NAME='Node Blog'
+PORT=3000
+APP_HOST=localhost
+APP_URL=http://localhost:3000
 
-
+#Database
+DB=mongodb
+DB_HOST=127.0.0.1
+DB_PORT=27017
+DB_NAME=node-blog
+DB_URL=mongodb://127.0.0.1:27017/node-blog
 
 #JWT
 JWT_SECRET_KEY=jwt-secret-private-key
-
-
 
 #Cookie
 COOKIE_SESSION_SECRET='this is my secret for cookie parsing'
