--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode=production --watch"
+    "build": "webpack --config webpack.config.js --mode=production",
+    "dev" : "npm run start",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
