--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode=production ",
-    "dev" : "webpack --config webpack.config.js --mode=production --watch",
+    "dev": "webpack --config webpack.config.js --mode=production --watch",
     "start": "node server.js"
   },
   "keywords": [],
@@ -36,6 +36,7 @@
     "node-sass": "^8.0.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
+    "serverless-http": "^3.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
