--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode=production ",
+    "build": "netlify-lambda build express",
+    "prod": "webpack --config webpack.config.js --mode=production ",
     "dev": "webpack --config webpack.config.js --mode=production --watch",
     "start": "node server.js"
   },
