--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm install && npm run build && node node_modules/pug-cli/index.js views/ --out ./"
+  command = "npm install && npm run build
   functions = "functions"
