--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "file-loader": "^6.2.0",
+    "netlify-lambda": "^2.0.16",
     "node-sass": "^8.0.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
