--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "prod": "webpack --config webpack.config.js --mode=production ",
     "dev": "webpack --config webpack.config.js --mode=production --watch",
-    "build" : "netlify-lambda build server",
-    "start" : "netlify-lambda serve server"
+    "start" : "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -34,11 +33,9 @@
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "file-loader": "^6.2.0",
-    "netlify-lambda": "^2.0.16",
     "node-sass": "^8.0.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
-    "serverless-http": "^3.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
